package com.astrastream.avpush.core.pipeline

enum class PipelineRole {
    SOURCE,
    FILTER,
    SINK
}
